...
                    NavigationLink(destination:
                        BagView()
                            .environmentObject(BagViewData(bagService: dataController.bagService))
                    ) {
                        Image(systemName: $dataController.bagList.count > 0 ? "cart.fill" : "cart")
                            .foregroundColor(.black)
                    }.accessibilityLabel("accessibilityBagIcon")
                })
                .accessibilityLabel("accessibilityProductList")
                .toastView(toast: $toast)
            }
        }
    }

    var hasProducts: Bool {
...
