...
            }
            .padding(.init(horizontal: 20))
            quantityManagingView
            
            Divider()
        }
        .accessibilityLabel("accessibilityBagListItem")
    }
    
    private var quantityManagingView: some View{
        HStack{
            Stepper("Quatity: \(item.quantity)", value: .init(get: { item.quantity }, set: { step in
                bagOperation?(.init(product: item.product, operation: step > item.quantity ? .add : .reduce))
...
