...
                .toolbar(content: {
                    removeAllView
                })
                .alert(isPresented: $removeAll) {
                    shouldRemoveAllAlertView
                }
                .accessibilityLabel("accessibilityBagList")
            }
            .fullExpand()
        }
    }

    private var removeAllView: some View {
...
