...
                    .background(Color.black)
                    .clipShape(Circle())
                    .background(
                        Circle()
                            .stroke(Color.white, lineWidth: 2)
                    )
            }.accessibilityLabel("accessibilityProductAddButton")
            Spacer()
        }
        .padding(10)
    }
}

...
